updated project again

--- a/src/Components/MakeSuccessfully/MakeSuccessfully.css
+++ b/src/Components/MakeSuccessfully/MakeSuccessfully.css
@@ -1,24 +1,30 @@
-.container_successfull{
-    position:absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    text-align: center;
+.container_successfull {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  text-align: center;
 }
-.content{
-    color: black;
-    height: 300px;
-    background-color: rgba(255, 210, 125, 0.578);
-    position: relative;
-    top: 21%;
-    /* padding: 10px; */
-    margin:auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.data{
- font-size: 1.2rem;
+.content {
+  color: black;
+  height: fit-content;
+  background-color: rgba(255, 210, 125, 0.578);
+  position: relative;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  top: 19%;
 }
 
+.data {
+  font-size: 1.2rem;
+  width: 100vw;
+}
+
+.shareLink {
+  padding: 18px;
+  border-radius: 23px;
+  background-color: #b8ffb9;
+}
