--- a/src/Components/FrontSide/FrontSide.css
+++ b/src/Components/FrontSide/FrontSide.css
@@ -1,12 +1,12 @@
-.container{
+.container {
   position: absolute;
   font-size: 1rem;
   width: 100vw;
-    height : 100vh;
-    background-color:white;
+  height: 100vh;
+  background-color: white;
 }
 
-.nav{
+.nav {
   background-color: rgb(179, 48, 124);
   padding: 23px;
   z-index: 1000;
@@ -18,20 +18,20 @@
   font-size: 1.3rem;
 }
 
-.btnDiv{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    position: absolute;
-    justify-content: center;
-    padding: 3px;
+.btnDiv {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  position: absolute;
+  justify-content: center;
+  padding: 3px;
 }
 
-.btnComponent{
-    padding: 13px;
-    background-color: chartreuse;
+.btnComponent {
+  padding: 13px;
+  background-color: chartreuse;
 }
-.form{
+.form {
   position: relative;
 }
 /* 
@@ -40,24 +40,24 @@
 
 /* Dropdown Button */
 .dropbtn {
-    position: fixed;
-    right: 25px;
-    top: 52px;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    z-index: 1000;
-    position: relative;
-    display: inline-block;
-  }
+  position: fixed;
+  right: 25px;
+  top: 52px;
+}
 
-  ion-icon {
-    color: black;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown_content {
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  z-index: 1000;
+  position: relative;
+  display: inline-block;
+}
+
+ion-icon {
+  color: black;
+}
+
+/* Dropdown Content (Hidden by Default) */
+/* .dropdown_content {
     display: none;
     background-color: whitesmoke;
     position: fixed;
@@ -66,26 +66,31 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown_content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown_content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown_content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {cursor: pointer;}
+  } */
 
+/* Links inside the dropdown */
+.dropdown_content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
-  .activeCls:active{
-    background-color: rgba(0, 0, 0, 0.217);
-  }
+/* Change color of dropdown links on hover */
+.dropdown_content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown_content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  cursor: pointer;
+}
+
+.activeCls:active {
+  background-color: rgba(0, 0, 0, 0.217);
+}
