--- a/src/Components/QuestionButtons/SingleChoiceQuestion/SingleChoise.css
+++ b/src/Components/QuestionButtons/SingleChoiceQuestion/SingleChoise.css
@@ -1,189 +1,276 @@
 * {
-    text-transform:capitalize;
-    color : black;
-    font-size: large;
+  /* text-transform:capitalize; */
+  color: black;
+  font-size: large;
 }
-
-
-.allPapers{
-    width: 100%;
-    height: 100%;
-    color: black;
+.allPapers {
+  width: 100%;
+  height: 100%;
+  color: black;
 }
 
 .choise {
-    display: list-item;
+  display: list-item;
 }
 
 .heading {
-    width: 100%;
-    background-color: rgba(135, 207, 235, 0.734);
-    box-sizing: border-box;
-    color: black;
-    padding: 21px;
-    font-size: larger;
-    font-weight: bolder;
-    text-align: center;
-    height: auto;
-    position: relative;
-    margin: 0;
-    border-bottom: 1px solid black;
-    transition: all 1s ease-in-out;
+  background-color: rgba(135, 207, 235, 0.734);
+  box-sizing: border-box;
+  color: black;
+  padding: 21px;
+  font-size: larger;
+  font-weight: bolder;
+  top: 26px;
+  text-align: center;
+  height: auto;
+  position: relative;
+  margin: 0;
+  border-bottom: 1px solid black;
+  transition: all 1s ease-in-out;
 }
 
 .hideHeading {
-    display: none;
-    transform: translateX(-110%);
+  display: none;
+  transform: translateX(-110%);
 }
 
 .showHeading {
-    display: block;
+  display: block;
 }
 
 .Singles {
-    position: fixed;
-    z-index: 500;
-    background-color: white;
-    width: 30%;
-    box-shadow: 1px 1px 1px black;
-    text-align: center;
-    padding: 35px;
-    left: 35%;
-    top: 7%;
-    box-sizing: border-box;
-    transition: all 0.5s ease-in-out;
-    display: inline-block;
+  position: fixed;
+  z-index: 500;
+  background-color: white;
+  width: fit-content;
+  box-shadow: 1px 1px 1px black;
+  text-align: center;
+  padding: 35px;
+  align-items: center;
+  left: 35%;
+  top: 7%;
+  box-sizing: border-box;
+  transition: all 0.5s ease-in-out;
+  display: inline-block;
 }
 
-.previewOptions {
+@media (max-width: 1100px) {
+  .Singles {
+    left: 32%;
+  }
+}
+@media (max-width: 1000) {
+  .Singles {
+    left: 29%;
+  }
+}
+@media (max-width: 850px) {
+  .Singles {
+    left: 28%;
+  }
+}
+@media (max-width: 730px) {
+  .Singles {
+    left: 25%;
+  }
+}
+@media (max-width: 680px) {
+  .Singles {
+    left: 23%;
+  }
+}
+@media (max-width: 590px) {
+  .Singles {
+    left: 20%;
+  }
+}
+@media (max-width: 550px) {
+  .Singles {
+    left: 18%;
+  }
+}
+@media (max-width: 500px) {
+  .Singles {
+    left: 6%;
+  }
+}
+@media (max-width: 300px) {
+  .Singles {
+    width: 100vw;
+  }
+}
+/* @media (max-width: 300px) {
+  .Singles {
+    width: 100vw;
+  }
+} */
 
-    display: flow-root;
-    padding: 0px;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    position: relative;
-    left: 35%;
-    margin-top: 6px;
+.previewOptions {
+  display: flow-root;
+  padding: 0px;
+  width: -moz-max-content;
+  width: max-content;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative;
+  left: 35%;
+  margin-top: 6px;
 }
 
 .previewOptions span {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .hide {
-    transform: translateY(-100%);
-    visibility: hidden;
+  transform: translateY(-100%);
+  visibility: hidden;
 }
 
 .show {
-    visibility: visible;
-    background-color: rgba(160, 255, 113, 0.898);
-    transform: translateY(50%);
+  visibility: visible;
+  background-color: rgba(160, 255, 113, 0.898);
+  transform: translateY(50%);
 }
 
 .QuestionType {
-
-    color: black;
-    font-size: large;
-    margin-top: 0;
-
+  color: black;
+  font-size: large;
+  margin-top: 0;
 }
 
 .Question {
-    margin-bottom: 9px;
-    margin-left: 40px;
+  margin-bottom: 9px;
+  margin-left: 40px;
 }
 
 .singleChoiseQuestion {
-    margin-left: 10px;
-    padding: 32px;
-    display: flex;
-    width: fit-content;
-    text-align: -webkit-auto;
-    color: black;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.122);
+  margin-left: 10px;
+  padding: 32px;
+  display: flex;
+  text-align: -webkit-auto;
+  color: black;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.122);
+}
+
+@media (max-width: 839px) {
+  .sin {
+    display: block;
+  }
+  .editeDeleteSection {
+    margin-left: 0%;
+  }
+}
+@media (max-width: 612px) {
+  .singleChoiseQuestion {
+    display: block;
+  }
+  .editeDeleteSection {
+    margin-left: 0%;
+  }
+}
+@media (max-width: 605px) {
+  .responce {
+    left: 0%;
+  }
+}
+
+.edit {
+  background: rgb(162 211 53 / 81%);
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 10px 5px 10px 5px;
+  font-size: medium;
+}
+
+.deletee {
+  background: #fb9b9b;
+  font-size: medium;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 7px 0px 0px 2p;
+}
+
+.editDeleteSection {
+  margin-left: 30px;
 }
 
 .cancle {
-    padding: 5px;
-    margin: 2px;
-    outline: 1px solid rgb(247, 62, 62);
-    border-radius: 2px;
-    color: rgb(247, 45, 45);
-
+  padding: 5px;
+  margin: 2px;
+  outline: 1px solid rgb(247, 62, 62);
+  border-radius: 2px;
+  color: rgb(247, 45, 45);
 }
 
 .cancle:hover {
-    background-color: rgb(255, 0, 0);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgb(255, 0, 0);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
 .add {
-    color: rgb(120, 2, 128);
-    outline: 1px solid rgb(110, 224, 17);
+  color: rgb(120, 2, 128);
+  outline: 1px solid rgb(110, 224, 17);
 }
 
 .add:hover {
-    background-color: rgba(42, 255, 138, 0.857);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgba(42, 255, 138, 0.857);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
 .save {
-    color: rgb(65 24 227);
-    outline: 1px solid rgb(65 24 227);
+  color: rgb(65 24 227);
+  outline: 1px solid rgb(65 24 227);
 }
 
 .save:hover {
-    background-color: rgb(65 24 227);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgb(65 24 227);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
-
 .delete {
-    color: chocolate;
-    outline: 1px solid chocolate;
+  color: chocolate;
+  outline: 1px solid chocolate;
 }
 
 .delete:hover {
-    background-color: rgb(145, 114, 14);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgb(145, 114, 14);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
 .preView {
-    color: rgb(250, 51, 150);
-    outline: 1px solid rgb(250, 70, 160);
+  color: rgb(250, 51, 150);
+  outline: 1px solid rgb(250, 70, 160);
 }
 
 .preView:hover {
-    background-color: rgb(247, 3, 222);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgb(247, 3, 222);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
 .submit {
-    color: darkgreen;
-    outline: 1px solid rgb(89, 206, 89);
+  color: darkgreen;
+  outline: 1px solid rgb(89, 206, 89);
 }
 
 .submit:hover {
-    background-color: rgb(77, 138, 41);
-    box-shadow: 1px 1px 5px black;
-    color: white
+  background-color: rgb(77, 138, 41);
+  box-shadow: 1px 1px 5px black;
+  color: white;
 }
 
 .Radio {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 /* .displayflex {
@@ -194,73 +281,92 @@
     display: inline-flex;
 } */
 
-
 .Singles:hover {
-    border-radius: 20px;
-    background-color: rgba(251, 222, 53, 0.728);
-    box-shadow: 1px 1px 8px black;
+  border-radius: 20px;
+  background-color: rgba(251, 222, 53, 0.728);
+  box-shadow: 1px 1px 8px black;
 }
 
 .input {
-    padding: 8px;
-    border: none;
-    text-align: center;
-    outline: none;
-    width: 100%;
-    align-items: center;
-    font-size: 1rem;
-    text-transform: capitalize;
+  padding: 8px;
+  border: none;
+  text-align: center;
+  outline: none;
+  width: 100%;
+  align-items: center;
+  font-size: 1rem;
+  text-transform: capitalize;
 }
 
 .input:hover {
-    box-shadow: 1px 1px 10px skyblue;
-    border-radius: 8px;
+  box-shadow: 1px 1px 10px skyblue;
+  border-radius: 8px;
 }
 
 .Btn {
-    display: flex;
-    justify-content: center;
-    /* align-items: space-evenly; */
-    padding: 9px;
+  display: flex;
+  justify-content: center;
+  /* align-items: space-evenly; */
+  padding: 9px;
 }
 
 .Btn button {
-    padding: 8.5px;
-    margin-left: 10px;
-    margin-top: 13px;
-    border: none;
+  padding: 8.5px;
+  margin-left: 10px;
+  margin-top: 13px;
+  border: none;
 }
 
 .finalOption {
-    padding: 5px;
-    margin-left: 3px;
+  padding: 5px;
+  margin-left: 3px;
+  /* width: -webkit-fill-available */
 }
 
-.responce{
+.responce {
+  width: fit-content;
+  padding: 9px;
+  background-color: #00ffff1f;
+  color: black;
+  margin: auto;
+  position: relative;
+  width: "-webkit-fill-available";
+}
+
+.submitQuestionPaper {
+  width: fit-content;
+  border: 1px solid orange;
+  padding: 6px;
+  font-size: 1rem;
+  position: relative;
+  margin-left: 46%;
+  margin-top: 23px;
+  margin-bottom: 20px;
+  letter-spacing: 3px;
+  cursor: pointer;
+}
+
+.submitQuestionPaper:hover {
+  background-color: orange;
+  color: black;
+  border-radius: 7px;
+}
+
+.editeDeleteSection {
+  margin-left: 4%;
+}
+
+@media (max-width: 635px) {
+  .widthSetter {
     width: fit-content;
-    padding: 9px;
-    background-color: #00ffff1f;
-    color: black;
-    margin: auto;
-    position: relative;
-    left: 20%;
+  }
 }
 
-
-.submitQuestionPaper{
-    width: 13%;
-    border: 1px solid orange;
-    padding: 6px;
-    font-size: 1rem;
-    position: relative;
-    left: -2%;
-    margin-top: 23px;
-    letter-spacing: 3px;
-    cursor: pointer;
-}
-
-.submitQuestionPaper:hover{
-   background-color: orange;
-   color: black;
-   border-radius: 7px;
+.btnHandler {
+  margin-left: 8px;
+  background-color: #ffe1c2;
+  border: none;
+  padding: 9px;
+  font-size: initial;
+  border-radius: 12px;
 }
