--- a/src/Components/QuestionPaper/QuestionPaper.css
+++ b/src/Components/QuestionPaper/QuestionPaper.css
@@ -1,21 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
 
 * {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
+  cursor: pointer;
 }
 
 .html {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   /* margin-top: -25px; */
   position: absolute;
   left: 0px;
   top: -35px;
   width: 100%;
-  height: 100vw;
+  height: 100vh;
   background-color: #fff;
 }
 .html_admin {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   position: absolute;
   left: 0px;
   top: 0px;
@@ -23,8 +24,8 @@
   height: 100vw;
   background-color: #fff;
 }
-.adminDiv{
-  position:absolute;
+.adminDiv {
+  position: absolute;
   background-color: #fff;
 }
 
@@ -35,33 +36,42 @@
   position: fixed;
   z-index: 1000000;
   top: 0px;
-  padding:8px;
+  padding: 9px;
   left: 0px;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(202 255 90 / 58%);
 }
 
-.msg{
+@media (max-width: 812px) {
+  .NavBar {
+    top: -1px;
+    padding: 0px;
+  }
+}
+
+.msg {
   left: 0px;
   bottom: 0px;
   position: fixed;
+  margin-top: 5px;
   background-color: black;
   color: white;
   font-size: 0.8rem;
+  letter-spacing: 1.2px;
+  word-spacing: 0.7px;
 }
 
-.msg span{
-        color: yellow;
+.msg span {
+  color: yellow;
 }
 
-.question_Content{
+.question_Content {
   position: relative;
   margin-top: 100px;
 }
 
-
 .btnGrd {
-  background: linear-gradient(to right, #FF4E50 0%, #F9D423 51%, #FF4E50 100%);
+  background: linear-gradient(to right, #ff4e50 0%, #f9d423 51%, #ff4e50 100%);
   width: fit-content;
 }
 
@@ -79,94 +89,135 @@
   border-color: rgba(235, 25, 18, 0.493);
 }
 
+@media (max-width: 538px) {
+  .btnGrd {
+    margin: 8px;
+  }
+}
+
 .btnGrd:hover {
   background-position: right center;
   color: #fff;
   text-decoration: none;
 }
 
-.showDiv{
-  display:block;
+.showDiv {
+  display: block;
 }
-.hideDiv{
-  display:none;
+.hideDiv {
+  display: none;
 }
 
-.makePaper{
+.makePaper {
   padding: 10px;
   margin: auto;
   font-weight: bold;
-  left: 43%;
+  margin-left: 43%;
   border-radius: 10px;
   outline: 1px solid #18ed18;
   border: none;
   top: 25px;
   margin-top: 10px;
+  margin-bottom: 31px;
 }
 
-.makePaper:hover{
+.makePaper:hover {
   color: white;
 }
 
-.makePaper:hover{
+.makePaper:hover {
   background-color: rgb(13, 251, 40);
 }
 
 /* ************************************************ */
 
 /* Dropdown Button */
-.dropbtn {
-  position: fixed;
-  right: 25px;
-  z-index: 1000000;
-  top: 20px;
-}
-.dropbtn_admin {
-  z-index: 1000000;
-  position: fixed;
-  right: 25px;
-  top: 30px;
-}
 
 /* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-  z-index: 10000000;
-}
-ion-icon {
-  color: black;
-}
-
 /* Dropdown Content (Hidden by Default) */
-.dropdown_content {
-  display: none;
-  background-color: whitesmoke;
-  text-decoration: none;
-  position: fixed;
-  right: 0px;
-  top: 60px;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
 
 /* Links inside the dropdown */
-.dropdown_content strong {
+/* .dropdown_content strong {
   color: black;
   text-decoration: none;
   display: block;
+}*/
+
+.dropdown_content {
+  position: absolute;
+  top: 19%;
+
+  background-color: whitesmoke;
+  transform: translateX(-100%);
+  z-index: 999999999999999999999999;
+  transition: 0.8s ease-in-out;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown_content strong:hover {background-color: #ddd;}
+.dropdown_content strong:hover {
+  background-color: #ddd;
+  /* transition: ease; */
+}
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown_content {display: block;}
+.Icon_Container {
+  position: absolute;
+  display: flex;
+  top: 8%;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 99999999999999;
+  width: 11%;
+}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {cursor: pointer;}
+@media (max-width: 1233px) {
+  .Icon_Container {
+    top: 11%;
+  }
+}
 
-/* .activeCls:active{
-  background-color: rgba(0, 0, 0, 0.217);
-} */
+.toggle {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 31px;
+  height: 2px;
+  background-color: #333131;
+  margin: 6px 15px;
+  transition: 0.4s;
+}
+
+.dropdown_Show {
+  display: block;
+  transform: translateX(0%);
+  transition: ease-in-out 0.7s;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-6px, 3px);
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+  opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -6px);
+}
+
+.boxH {
+}
+
+@media (max-width: 540px) {
+  .boxH {
+    width: fit-content;
+  }
+}
